--- a/css/meny.css
+++ b/css/meny.css
@@ -12,72 +12,78 @@ a {
   text-decoration: none;
 }
 
-
-/*header*/
-
-header {
-  margin-top: 15px;
+.header {
+  height: 100px;
+  display: flex;
 }
 
-header nav {
+.header .bs_logo {
+  margin-left: 20px;
+  margin-top: 20px;
+  margin-right: auto;
+  width: 75px;
+  height: 75px;
+}
+
+.header nav {
+  margin-left: auto;
+  margin-top: 10px;
+}
+
+.header nav ul {
   list-style-type: none;
   display: flex;
-  justify-content: space-between;
 }
 
-#home_button {
-  margin-left: 15px;
-}
-
-#meny_button {
-  margin-right: 15px;
-}
-
-header div {
+.header nav ul li {
   text-align: center;
+  margin-left: 20px;
+  margin-right: 20px;
   padding-left: 15px;
   padding-right: 15px;
   padding-top: 10px;
   padding-bottom: 10px;
+
   border: 1px solid white;
   border-radius: 5px;
+  transition: border 1s;
+
   background: rgba(255, 255, 255, 0.25);
   transition: background 1s;
   transition: border 1s;
 }
 
-header div:hover{
+.header nav ul li:hover{
   background: rgba(229, 229, 229, 1.0);
   border: 1px solid black;
   border-radius: 5px;
 }
 
-header a {
+.header nav ul li a {
   font-size: 17px;
   color: white;
   transition: color 1s;
 }
 
-header div:hover a {
-  color: black
+.header nav ul li a:hover {
+  color: black;
 }
 
 /* Main title thing*/
 
-
-main {
+.main_title {
   margin-top: 60px;
   width: 900px;
   margin-left: auto;
   margin-right: auto;
 }
 
-main h1 {
+.main_title h1 {
   text-align: center;
   color: white;
 }
 
-main p {
+.main_title p {
   color: white;
   margin-left: auto;
   margin-right: auto;
@@ -86,9 +92,7 @@ main p {
   width: 750px;
 }
 
-
 /*footer*/
-
 
 footer {
   background: rgba(255, 255, 255);
