--- a/css/ram.css
+++ b/css/ram.css
@@ -12,78 +12,72 @@ a {
   text-decoration: none;
 }
 
-.header {
-  height: 100px;
-  display: flex;
+
+/*header*/
+
+header {
+  margin-top: 15px;
 }
 
-.header .bs_logo {
-  margin-left: 20px;
-  margin-top: 20px;
-  margin-right: auto;
-  width: 75px;
-  height: 75px;
-}
-
-.header nav {
-  margin-left: auto;
-  margin-top: 10px;
-}
-
-.header nav ul {
+header nav {
   list-style-type: none;
   display: flex;
+  justify-content: space-between;
 }
 
-.header nav ul li {
+#home_button {
+  margin-left: 15px;
+}
+
+#meny_button {
+  margin-right: 15px;
+}
+
+header div {
   text-align: center;
-  margin-left: 20px;
-  margin-right: 20px;
   padding-left: 15px;
   padding-right: 15px;
   padding-top: 10px;
   padding-bottom: 10px;
-
   border: 1px solid white;
   border-radius: 5px;
-  transition: border 1s;
-
   background: rgba(255, 255, 255, 0.25);
   transition: background 1s;
   transition: border 1s;
 }
 
-.header nav ul li:hover{
+header div:hover{
   background: rgba(229, 229, 229, 1.0);
   border: 1px solid black;
   border-radius: 5px;
 }
 
-.header nav ul li a {
+header a {
   font-size: 17px;
   color: white;
   transition: color 1s;
 }
 
-.header nav ul li a:hover {
-  color: black;
+header div:hover a {
+  color: black
 }
 
 /* Main title thing*/
 
-.main_title {
+
+main {
   margin-top: 60px;
   width: 900px;
   margin-left: auto;
   margin-right: auto;
 }
 
-.main_title h1 {
+main h1 {
   text-align: center;
   color: white;
 }
 
-.main_title p {
+main p {
   color: white;
   margin-left: auto;
   margin-right: auto;
@@ -92,7 +86,9 @@ a {
   width: 750px;
 }
 
+
 /*footer*/
+
 
 footer {
   background: rgba(255, 255, 255);
