--- a/css/meny.css
+++ b/css/meny.css
@@ -3,7 +3,7 @@ body {
   padding: 0px;
   font-family: 'Poppins', sans-serif;
   background-color: #e6e6e6;
-  background-image: url("../img/sunset.jpg");
+  background-image: url("../img/4kr.jpg");
   background-repeat: no-repeat;
   background-size: cover;
 }
@@ -12,87 +12,110 @@ a {
   text-decoration: none;
 }
 
-.header {
-  height: 100px;
-  display: flex;
+
+/*header*/
+
+header {
+  margin-top: 15px;
 }
 
-.header .bs_logo {
-  margin-left: 20px;
-  margin-top: 20px;
-  margin-right: auto;
-  width: 75px;
-  height: 75px;
-}
-
-.header nav {
-  margin-left: auto;
-  margin-top: 10px;
-}
-
-.header nav ul {
+header nav {
   list-style-type: none;
   display: flex;
+  justify-content: space-between;
 }
 
-.header nav ul li {
+#home_button {
+  margin-left: 15px;
+}
+
+#meny_button {
+  margin-right: 15px;
+}
+
+header div {
   text-align: center;
-  margin-left: 20px;
-  margin-right: 20px;
   padding-left: 15px;
   padding-right: 15px;
   padding-top: 10px;
   padding-bottom: 10px;
-
   border: 1px solid white;
   border-radius: 5px;
-  transition: border 1s;
-
   background: rgba(255, 255, 255, 0.25);
   transition: background 1s;
   transition: border 1s;
 }
 
-.header nav ul li:hover{
+header div:hover{
   background: rgba(229, 229, 229, 1.0);
   border: 1px solid black;
   border-radius: 5px;
 }
 
-.header nav ul li a {
+header a {
   font-size: 17px;
   color: white;
   transition: color 1s;
 }
 
-.header nav ul li a:hover {
-  color: black;
+header div:hover a {
+  color: black
 }
 
 /* Main title thing*/
 
-.main_title {
+
+main {
   margin-top: 60px;
-  width: 900px;
-  margin-left: auto;
-  margin-right: auto;
 }
 
-.main_title h1 {
-  text-align: center;
+main a {
   color: white;
+  padding-left: 60px;
+  padding-right: 60px;
+  padding-top: 30px;
+  padding-bottom: 30px;
+  border: 1px solid white;
+  border-radius: 5px;
+  font-size: 30px;
+  margin-left: 10px;
+  margin-right: 10px;
+  text-align: center;
+  background: rgba(255, 255, 255, 0.25);
+  transition: background 1s;
+  transition: border 1s;
+  transition: color 1s;
 }
 
-.main_title p {
-  color: white;
+main a:hover {
+  background: rgba(229, 229, 229, 1.0);
+  border: 1px solid black;
+  border-radius: 5px;
+  color: black;
+}
+
+main .row1 {
+  display: flex;
+  width: 1200px;
+  height: auto;
   margin-left: auto;
   margin-right: auto;
-  margin-bottom: 40px;
-  text-align: center;
-  width: 750px;
+  justify-content: center;
 }
+
+main .row2 {
+  display: flex;
+  width: 1200px;
+  height: auto;
+  margin-left: auto;
+  margin-right: auto;
+  justify-content: center;
+}
+
+
 
 /*footer*/
+
 
 footer {
   background: rgba(255, 255, 255);
