--- a/css/ram.css
+++ b/css/ram.css
@@ -3,7 +3,7 @@ body {
   padding: 0px;
   font-family: 'Poppins', sans-serif;
   background-color: #e6e6e6;
-  background-image: url("../img/sunset.jpg");
+  background-image: url("../img/4kr.jpg");
   background-repeat: no-repeat;
   background-size: cover;
 }
