--- a/css/kontakta.css
+++ b/css/kontakta.css
@@ -62,7 +62,7 @@ header div:hover a {
   color: black
 }
 
-/* Main title thing*/
+/*Om section*/
 
 
 main {
@@ -80,9 +80,19 @@ main h1 {
 }
 
 .om_text {
-  background-color: red;
   padding: 0 10px 0 10px;
   color: white;
+}
+
+/*Aside section*/
+
+.sociala_medier img {
+  width: 225px;
+  height: auto;
+  border-bottom: 2px solid white;
+  border-left: 2px solid white;
+  border-right: 2px solid white;
+  border-radius: 5px;
 }
 
 .sociala_medier {
@@ -102,12 +112,15 @@ main h1 {
 
 footer {
   background: rgba(255, 255, 255);
+  /*
   position: fixed;
   left: 0;
   bottom: 0;
+  */
   width: 100%;
   height: 23px;
   border-top: 2px solid #e3e3e3;
+  margin-top: 25px;
 }
 
 footer p {
