--- a/css/kontakta.css
+++ b/css/kontakta.css
@@ -86,25 +86,30 @@ main h1 {
 
 /*Aside section*/
 
-.sociala_medier img {
-  width: 225px;
+aside img {
+  width: 250px;
   height: auto;
   border-bottom: 2px solid white;
-  border-left: 2px solid white;
-  border-right: 2px solid white;
-  border-radius: 5px;
 }
 
-.sociala_medier {
-  border: 1px solid white;
-  border-radius: 5px;
-  padding: 0 10px 0 10px;
+aside {
   color: white;
+  width: 250px;
+  border: 2px solid white;
+  border-radius: 5px;
 }
 
-.sociala_medier a {
+aside a {
   text-decoration: underline;
   color: white;
+}
+
+aside div h3 {
+  margin-left: 10px;
+}
+
+aside div p {
+  margin-left: 10px;
 }
 
 /*footer*/
