--- a/css/index.css
+++ b/css/index.css
@@ -6,6 +6,7 @@ body {
   background-image: url("../img/4kr.jpg");
   background-repeat: no-repeat;
   background-size: cover;
+  background-attachment: fixed;
 }
 
 a {
@@ -67,7 +68,8 @@ header div:hover a {
 
 main {
   margin-top: 60px;
-  width: 900px;
+  max-width: 900px;
+  width: 100%;
   margin-left: auto;
   margin-right: auto;
 }
@@ -83,7 +85,7 @@ main p {
   margin-right: auto;
   margin-bottom: 40px;
   text-align: center;
-  width: 750px;
+  width: 100%;
 }
 
 
