--- a/css/meny.css
+++ b/css/meny.css
@@ -6,6 +6,7 @@ body {
   background-image: url("../img/4kr.jpg");
   background-repeat: no-repeat;
   background-size: cover;
+  background-attachment: fixed;
 }
 
 a {
@@ -66,24 +67,33 @@ header div:hover a {
 
 
 main {
-  margin-top: 60px;
+  margin-top: 50px;
+  max-width: 1200px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 main a {
+  /*
   padding-left: 60px;
   padding-right: 60px;
+
   padding-top: 30px;
   padding-bottom: 30px;
+  */
+  padding-top: 3%;
+  padding-bottom: 3%;
   border-radius: 5px;
   font-size: 30px;
   margin-left: 10px;
   margin-right: 10px;
   text-align: center;
+  width: 100%;
 }
 
 main a {
     border: 1px solid white;
-    background: rgba(255, 255, 255, 0.25);
+    background: rgba(255, 255, 255, 0.5);
     color: white;
     transition: background 1s, border 1s, color 1s;
 }
@@ -97,19 +107,19 @@ main a:hover {
 
 main .row1 {
   display: flex;
-  width: 1200px;
   height: auto;
-  margin-left: auto;
-  margin-right: auto;
   justify-content: center;
 }
 
 main .row2 {
   display: flex;
-  width: 1200px;
   height: auto;
-  margin-left: auto;
-  margin-right: auto;
+  justify-content: center;
+}
+
+main .row3 {
+  display: flex;
+  height: auto;
   justify-content: center;
 }
 
@@ -126,13 +136,13 @@ footer {
   width: 100%;
   height: 23px;
   border-top: 2px solid #e3e3e3;
+  margin-top: 30px;
 }
 
 footer p {
   font-size: 12px;
   text-align: center;
   margin-top: 2px;
-  margin-bottom: 7px;
 }
 
 footer a {
