--- a/css/chassi.css
+++ b/css/chassi.css
@@ -70,6 +70,7 @@ main {
   margin-top: 60px;
   display: flex;
   justify-content: space-around;
+  margin-bottom: 50px;
 }
 
 .main_text {
@@ -79,7 +80,7 @@ main {
   width: 65%;
 }
 
-.main_text h2 {
+.main_text h1 {
   color: #404040;
   margin-left: 10px;
 }
@@ -136,6 +137,7 @@ footer {
   height: 23px;
   border-top: 2px solid #e3e3e3;
   margin-top: 50px;
+  position: fixed;
 }
 
 footer p {
