--- a/css/ram.css
+++ b/css/ram.css
@@ -85,6 +85,10 @@ main {
   margin-left: 10px;
 }
 
+.main_text h4 {
+  margin-left: 10px;
+}
+
 .main_text p {
   color: #404040;
   margin-left: 10px;
